# community-archiver

./: .gitignore  Cargo.toml  README.md  justFile
data/: emote_mapping_default.json
scripts/: download_emote.py  download_imgs.py  ids_check.py  sanity_check.py  sanity_check_2.py  sanity_check_3.py
scripts/automate/: download_posts.py  pyproject.toml
scripts/browser/: download_emote_mapping.js  download_post_ids.js  download_posts.js
src/: emoji.rs  emote.rs  main.rs
tests/fixtures/: pre_thread_replied.html  threaded_replied.html
