[package]
name = "community-archiver"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
ego-tree = "0.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.10.0"
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.41", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
