[package]
name = "community-archiver"
version = "0.1.0"
edition = "2024"
default-run = "community-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
ego-tree = "0.10.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.11.0"
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = { version = "0.2.17", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.45.1", features = ["json"] }
pretty_assertions = "1.4.1"
